--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev": "vite",
     "build": "vue-tsc -b && vite build",
     "build:dev": "vite build --mode development",
+    "build:single": "vue-tsc -b && vite build --mode single",
     "tsc": "vue-tsc --noEmit",
     "preview": "vite preview",
     "test": "vitest"
@@ -34,6 +35,8 @@
     "postcss": "^8.5.6",
     "typescript": "~5.9.3",
     "vite": "^7.2.4",
+    "vite-plugin-pwa": "^1.2.0",
+    "vite-plugin-singlefile": "^2.3.0",
     "vitest": "^4.0.17",
     "vue-tsc": "^3.1.4"
   }
