--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "context-protector-web",
+  "name": "context-protector",
   "private": true,
-  "version": "0.0.2",
+  "version": "0.0.3",
   "type": "module",
   "scripts": {
     "dev": "vite",
