--- a/.github/workflows/deploy-gh-pages.yml
+++ b/.github/workflows/deploy-gh-pages.yml
@@ -28,12 +28,17 @@ jobs:
           node-version: '20'
           cache: 'npm'
 
+
+      - name: Configure Git
+        run: |
+          git config --global user.name "github-actions[bot]"
+          git config --global user.email "github-actions[bot]@users.noreply.github.com"
+
       - name: Install dependencies
         run: npm ci
 
       - name: Build for GitHub Pages
         run: npm run build:ghpages
     
-
       - name: deploy for GitHub Pages
         run: npm run deploy:ghpages
