change gh pages action methods

--- a/.github/workflows/deploy-gh-pages.yml
+++ b/.github/workflows/deploy-gh-pages.yml
@@ -1,47 +1,30 @@
-name: Deploy to GitHub Pages
+name: Deploy Pages
 
 on:
   push:
-    tags:
-      - 'v*'
-  workflow_dispatch:
+    branches: [main]
 
 permissions:
   pages: write
   id-token: write
-  contents: write
-
-concurrency:
-  group: 'pages'
-  cancel-in-progress: false
+  contents: read
 
 jobs:
-  build:
+  deploy:
     runs-on: ubuntu-latest
+
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-
-      - name: Setup Node
-        uses: actions/setup-node@v4
-        with:
-          node-version: '20'
-          cache: 'npm'
-
-
-      - name: Configure Git
-        run: |
-          git config --global user.name "github-actions[bot]"
-          git config --global user.email "github-actions[bot]@users.noreply.github.com"
       - uses: actions/checkout@v4
+
+      - uses: actions/setup-node@v4
         with:
-          persist-credentials: true
+          node-version: 20
 
-      - name: Install dependencies
-        run: npm ci
+      - run: npm install
+      - run: npm run build:ghpages
 
-      - name: Build for GitHub Pages
-        run: npm run build:ghpages
-    
-      - name: deploy for GitHub Pages
-        run: npm run deploy:ghpages
+      - uses: actions/upload-pages-artifact@v3
+        with:
+          path: dist
+
+      - uses: actions/deploy-pages@v4
